--- a/Assets/Styles.css
+++ b/Assets/Styles.css
@@ -13,26 +13,39 @@ body {
 
 header {
     display:flex;
-    justify-content: center;
-    background-color: rgba(126, 60, 13, 0.836);
-    text-align: center;
-    width: 96%;
+    flex-wrap: wrap;
+    background-image: url(./images/Wood.jpg);
+    /*background-color: rgba(126, 60, 13, 0.836);*/
+    height:100%;
     margin: 0 auto;
     color: #fff;
+    font-size: 40px;
+}
+header h1{
+    margin-bottom: 0;
+    padding-left: 5px;
 }
 
 nav {
-    display:flex;
-    justify-content: center;
-    margin-top: 30px;
+    display: flex;
+    flex-wrap: wrap;
+    background-image: url(./images/Wood.jpg);
+    height: 100%;
+    margin: 0 auto;
+    justify-content: flex-end;
+}
+nav li{
+    display: inline;
+    list-style: none;
+    font-size: 25px;
 }
 
-div ul {
+nav a{
+    color: #fff;
     text-decoration: none;
-    display: none;
+    padding: 10px 10px;
 }
 
-input:hover {
-    height: 215px;
-    width: 215px;
+.link-underline:hover{
+    text-decoration: underline;
 }
