--- a/Assets/Styles.css
+++ b/Assets/Styles.css
@@ -8,14 +8,15 @@
 }
 
 body {
-    background-color: rgba(70, 61, 58, 0.918);
+    background-image: url(./images/Wood.jpg);
+    background-color: white;
 }
 
 header {
     display:flex;
     flex-wrap: wrap;
-    background-image: url(./images/Wood.jpg);
-    /*background-color: rgba(126, 60, 13, 0.836);*/
+    /*background-image: url(./images/Wood.jpg);*/
+    background-color: rgba(126, 39, 13, 0.836);
     height:100%;
     margin: 0 auto;
     color: #fff;
@@ -29,7 +30,8 @@ header h1{
 nav {
     display: flex;
     flex-wrap: wrap;
-    background-image: url(./images/Wood.jpg);
+    background-color: rgba(126, 39, 13, 0.836);
+    /*background-image: url(./images/Wood.jpg);*/
     height: 100%;
     margin: 0 auto;
     justify-content: flex-end;
@@ -48,4 +50,31 @@ nav a{
 
 .link-underline:hover{
     text-decoration: underline;
+}
+
+aside{
+    display: flex;
+    flex-direction: column;
+    float: left;
+    justify-content: space-between;
+    background-color: rgba(126, 39, 13, 0.836);
+    border-right: solid rgba(0, 0, 0, 0.726);
+    border-width: 5px;
+    padding-left: 5px;
+    Padding-right: 5px;
+}
+
+main img{
+    float:right;
+    position: relative;
+    bottom: 110px;
+    right:100px;
+   
+}
+
+main p {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    color: #fff;
 }
