Changed my layout to something more asthetic. tidy up the folders

--- a/Assets/Styles.css
+++ b/Assets/Styles.css
@@ -8,15 +8,13 @@
 }
 
 body {
-    background-image: url(./images/Wood.jpg);
     background-color: white;
 }
 
 header {
     display:flex;
     flex-wrap: wrap;
-    /*background-image: url(./images/Wood.jpg);*/
-    background-color: rgba(126, 39, 13, 0.836);
+    background-image: url(./images/Wood.jpg);
     height:100%;
     margin: 0 auto;
     color: #fff;
@@ -30,8 +28,8 @@ header h1{
 nav {
     display: flex;
     flex-wrap: wrap;
-    background-color: rgba(126, 39, 13, 0.836);
-    /*background-image: url(./images/Wood.jpg);*/
+    border-bottom: solid rgba(0, 0, 0, 0.726);
+    background-image: url(./images/Wood.jpg);
     height: 100%;
     margin: 0 auto;
     justify-content: flex-end;
@@ -56,25 +54,32 @@ aside{
     display: flex;
     flex-direction: column;
     float: left;
-    justify-content: space-between;
-    background-color: rgba(126, 39, 13, 0.836);
+    color:#fff;
+    background-image: url(./images/Wood.jpg);
     border-right: solid rgba(0, 0, 0, 0.726);
     border-width: 5px;
     padding-left: 5px;
     Padding-right: 5px;
 }
 
-main img{
-    float:right;
-    position: relative;
-    bottom: 110px;
-    right:100px;
+section img{
+    justify-content: end;
+    padding-top: 30px;
+    padding-left: 100px;
    
 }
 
-main p {
+section p {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
-    color: #fff;
+    padding-top: 30px;
+    padding-left: 100px;
+    text-align: center;
+}
+
+.row {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
